--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ gradle-app.setting
 
 # Avoid ignore Gradle wrappper properties
 !gradle-wrapper.properties
+/.idea/
 
 # Cache of project
 .gradletasknamecache
