--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,7 @@ permissions:
 jobs:
   checkPR:
     runs-on: ubuntu-latest
+    if: ${{ github.event.pull_request.base.ref == 'master' }}
     steps:
       - name: Fail if targeted at master
         run: |
