--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,7 +20,7 @@ jobs:
           exit 1
 
       - name: Notify User
-        if: ${{ github.event.pull_request.base.ref == 'master' }}
+        if: always()
         uses: actions/github-script@v5
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
