--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 
     testImplementation("org.assertj:assertj-core:3.24.2")
     testImplementation("org.junit.jupiter:junit-jupiter-engine:5.9.2")
+    implementation('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
+    implementation 'org.testng:testng:7.1.0'
 }
 
 test {
